--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ chrono = "0.4.37"
 rusqlite = "0.31.0"
 neon = "1"
 rust-lapper = "1.1.0"
+csv = "1.3.0"
+serde = { version = "1.0.199", features = ["derive"] }
